--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -21,7 +21,7 @@
         <p>I have just started my journey to being a software designer but i am really excited, I have already seen many applications that could be created to help others that i want to one day</p>
         <h2>Question for you</h2>
         <p>if you could go back in time and watch one moment in history what would you watch?</p>
-        <p>I would love to hear the discussion and the arguments that were had as the decloration of independence was written.</p>
+        <p>I would love to hear the discussion and the arguments that were had as the decloration of independence was written. =]</p>
     </main>
 
 </body>
