--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
 </nav>
-<h1>WDD130 Joshua Burke</h1>
+<main>
+    <h1>WDD130 Joshua Burke</h1>
+</main>
 </body>
 </html>
