--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <a href="#">Personal Siteplan</a>
 </nav>
 <main>
-    <h1>WDD130 Joshua Burke</h1>
+    <h1>WDD130 --- Joshua Burke</h1>
+    <p>I hope you are having a good day</p>
 </main>
 </body>
 </html>
