--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </nav>
 <main>
     <h1>WDD130 --- Joshua Burke</h1>
-    <p>I hope you are having a good day</p>
+    <h2>I hope you are having a good day</h2>
 </main>
 </body>
 </html>
