--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a id="logo_link" href="index.html"><img class="logo" src="images/heartbeat_rapids_logo.png" alt="HeartBeat Rapids Logo"></a>
+        <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="HeartBeat Rapids Logo"></a>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
@@ -17,7 +17,7 @@
     </header>
     <div id="hero">
         <div id="hero_box">
-            <img id="hero_img" src="https://picsum.photos/1000/300" alt="People Enjoying Rafting">
+            <img id="hero_img" src="images/hero.png" alt="People Enjoying Rafting">
         </div>
         <section id="hero_msg">
             <h1 class="home_title">HaveAn Aventure</h1>
@@ -28,11 +28,44 @@
         </section>
 
     </div>
-    <main>
-
+    <main class="home_grid">
+        <section class="rivers_card">
+            <img class="card_img" src="images/rivers.jpg" alt="river">
+            <img class="icon" src="images/river_icon.png" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping_card">
+            <img class="card_img" src="images/camping.jpg" alt="beautiful mountains with a tent">
+            <img class="icon" src="images/fire_icon.png" alt="fire">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids_card">
+            <img class="card_img" src="images/rapids.jpg" alt="rapids">
+            <img class="icon" src="images/oars.png" alt="cross oars">
+            <h2>Rapids</h2>
+        </section>
+        <img class="mountains" src="images/mountains.jpg" alt="Beautiful Picture of Mountains">
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Join us on the IdahoFalls Snake River for an exhilarating expierience</p>
+            <a class="join" href="rivers.html">Join Us</a>
+        </section>
     </main>
     <footer>
-
+        <p>HeartBeat Rapids &copy; 2023</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contact_us.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
