--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,9 @@
 <body>
     <div id="content">
         <header>
-            <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="HeartBeat Rapids Logo"></a>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/logo.png" alt="HeartBeat Rapids Logo">
+            </a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="#">Page 2</a>
@@ -22,7 +24,7 @@
                 <img id="hero_img" src="images/hero.png" alt="People Enjoying Rafting">
             </div>
             <section id="hero_msg">
-                <h1 class="home_title">Have An Aventure</h1>
+                <h1 class="home_title">Adventures in the Water</h1>
                 <h4>Make Memories with Heartbeat Rapids</h4>
                 <div class="button_box">
                     <a class="book" href="contact_us.html">Book Now</a>
