--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -103,7 +103,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Rivers
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -122,6 +122,7 @@
 
     <h3>[Page 2]</h3>
 
+    <img src="images/Page 2 Wireframe.PNG">
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
