--- a/ScoresbyFarms/site-plan-scoresbyfarms.html
+++ b/ScoresbyFarms/site-plan-scoresbyfarms.html
@@ -125,29 +125,40 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        People will visit the Scoresby Farms website to find information such as what time we open, our main staple items we keep in stock, where we are located and how we started. Scoresby Farms is a central place for customers to find information and updates about the stand, they can find information from how we started and how we do things to when we open and how long we open each week.
+Here at Scoresby Farms, we believe in supporting each other that means we not only sell our own fresh produce, but we also bring you local produce from farmers across Idaho Falls and even Utah. 
+Our main three products we bring in or grow ourselves is Corn, Peaches, and Potatoes. +
+Our Corn is a sweet white and yellow mix. We have been perfecting it for 30+ years and are happy to say that it is some of the best corn Idaho Falls. It is great as a side dish for dinner or served all by itself. We have locals from all over Idaho come to buy our amazing, sweet corn. 
+Our Peaches come from a local orchard in the Boise Valley, and we sometimes bring in famous Utah Peaches. These make a great addition to the kitchen as they are great for pies, syrups and are excellent canners. Our Peaches are Juicy and Tasty, a great treat all by themselves. 
+We grow our own Red, Yukon Gold, and recently Huckleberry Gold Potatoes. We also bring in Burbank Russets after they harden up, so they last through the winter. These Potatoes are great for Baking, Mashing, and just about anything you can think of. I personally love making French Fries with our Delicious Burbank’s because they make long fries that are crunchy and with a soft interior.
+We sell a large variety of fruits and vegetables at great prices. Our products include everything from strawberries, raspberries, apples, zucchini, many varieties of squash once fall hits, and many types of peppers. 
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/Field.jpg" alt="image for homepage">
+        <img src="images/Sun Set Cornfield.jpg" alt="image for homepage">
+        <img src="images/Blueberrys.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>A little about the Scoresbys</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Eric and Sheila Scoresby started simple by growing corn on a small field they had recently acquired, they sold this corn on the corner of main street, when they started out things were slow going but it was steady income and it was working well, The Scoresby’s Enjoyed the business and found they had great success with it so they decided to try and grow things bigger, they rented a building in Idaho Falls and began selling their corn out of there and making fresh baked goods to sell as well, but things didn’t go as planned. Making baked goods was too much work for their small family, but without the extra products they wouldn’t be making any money because renting the building was too expensive. They decided to keep working hard and trying to bring more business in but they couldn’t afford to so they decided on a plan, they bought a tent and rented a space next to the highway. That year they opened the fruit stand, at this point their children were involved and helped with just about everything from picking to managing the stand. They ended up closing their business in town and stuck with the fruit stand it was easy to pack up and was more flexible. They also decided to stop selling baked goods as they would be in the hot sun all day and they worried about them spoiling. They continue to open each year and sell great farm fresh produce even today!
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/Cornfield.jpg" alt="image for page">
+        <img src="images/Field2.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Contact us
+        -- Shila Scoresby
+        --Eric Scoresby
+        --Email List
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/Lots of Sky Cornfield.jpg" alt="image for page3">
+        <img src="images/Powerlines and Field.jpg" alt="image for page3">
 
       </ul>
       <hr>
