--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
-  <a href="site-plan-scoresbyfarms.html">Personal Siteplan</a>
+  <a href="ScoresbyFarms/site-plan-scoresbyfarms.html">Personal Siteplan</a>
 </nav>
 <main>
     <h1>WDD130 --- Joshua Burke</h1>
