--- a/ScoresbyFarms/site-plan-scoresbyfarms.html
+++ b/ScoresbyFarms/site-plan-scoresbyfarms.html
@@ -87,9 +87,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="site-plan-scoresbyfarms.html">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          About Us <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact Us  <!-- change this -->
         </div>
 
         <div class="top">
@@ -151,6 +151,7 @@ We sell a large variety of fruits and vegetables at great prices. Our products i
       </ul>
       <h3>Contact us</h3>
       <p>
+      Got any Questions? Contact us today!
         Contact us
         -- Shila Scoresby
         --Eric Scoresby
