--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,10 +14,11 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="rivers.html">Page 2</a>
                 <a href="site-plan-rafting.html"> Site Plan</a>
                 <a href="contact_us.html">Contact Us</a>
             </nav>
+
         </header>
         <div id="hero">
             <div id="hero_box">
