updated Home Page

--- a/index.html
+++ b/index.html
@@ -3,21 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>WDD130 Repository Main Page</title>
 </head>
 <body>
-    <h1>Welcome to WDD130 Web Projects</h1>
 <nav>
-  <a href="aboutme/index.html">About Me Page</a>             
-  <a href="wwr/index.html">White Water Rafting Website</a>
-  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-  <a href="positioning.html">Positioning Activity</a>
-  <a href="#">Personal Website</a>
-  <a href="ScoresbyFarms/site-plan-scoresbyfarms.html">Personal Siteplan</a>
+    <h1>Welcome to WDD130 Web Projects</h1>
+    <a href="aboutme/index.html">About Me Page</a>             
+    <a href="wwr/index.html">White Water Rafting Website</a>
+    <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+    <a href="positioning.html">Positioning Activity</a>
+    <a href="#">Personal Website</a>
+    <a href="ScoresbyFarms/site-plan-scoresbyfarms.html">Personal Siteplan</a>
 </nav>
 <main>
     <h1>WDD130 --- Joshua Burke</h1>
     <h2>I hope you are having a good day</h2>
+    <div id="websites">
+    <section id = "AboutMe"> 
+        <h2>About-Me</h2>
+        <a href="aboutme/index.html"><img src="images/DSC_6650.jpg"></a>
+    </section>
+    <section id = "ScoresbyFarms">
+        <h2>ScoresbyFarms</h2>
+        <a href="ScoresbyFarms/site-plan-scoresbyfarms.html"><img src="images/Logo.PNG"></a>
+    </section>
+    <section id = "RiverRafting">
+        <h2>River Rafting Site</h2>
+        <a href="wwr/index.html"><img src="images/rivers.jpg"><a>
+    </section>
+    </div>
 </main>
 </body>
 </html>
