--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-1                <a href="rivers.html"> Our Rivers</a>
+                <a href="rivers.html">Our Rivers</a>
                 <a href="site-plan-rafting.html"> Site Plan</a>
                 <a href="contact_us.html">Contact Us</a>
             </nav>
