added Wireframes and finished that section

--- a/ScoresbyFarms/site-plan-scoresbyfarms.html
+++ b/ScoresbyFarms/site-plan-scoresbyfarms.html
@@ -171,21 +171,21 @@ We sell a large variety of fruits and vegetables at great prices. Our products i
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Home page will tell about our top sellers as well as a little about who we are.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/ScoresbyFarms_WireFrame.PNG" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>About Us</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        this will a little about each of the owners Eric and Sheila and then tell their story about how they got started
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/ScoresbyFarms_WireFrame2.PNG" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Contact us</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        will have contact information to get ahold of the stand, as well as a signup for our email list
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/ScoresbyFarms_WireFrame3.png" alt="page 3 wireframe">
     </main>
   </body>
 
