--- a/ScoresbyFarms/site-plan-scoresbyfarms.html
+++ b/ScoresbyFarms/site-plan-scoresbyfarms.html
@@ -185,7 +185,7 @@ We sell a large variety of fruits and vegetables at great prices. Our products i
       <p>         
         will have contact information to get ahold of the stand, as well as a signup for our email list
       </p>
-      <img src="images/ScoresbyFarms_WireFrame3.png" alt="page 3 wireframe">
+      <img src="images/ScoresbyFarms_WireFrame3.PNG" alt="page 3 wireframe">
     </main>
   </body>
 
