--- a/ScoresbyFarms/index.html
+++ b/ScoresbyFarms/index.html
@@ -3,18 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ScoresbyFarms|Home</title>
 </head>
+<header>
+    <a id = "logo_link" href="index.html">
+        <img src="images/logo316.png" alt="ScoresbyFarms Logo">
+    </a>
+    <H2>ScoresbyFarms</H2>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href='our_story.html'>About Us</a>
+        <a href="contact_us.html">Contact Us</a>
+    </nav>
+</header>
+
+
 <body>
-    <div id="Header">
-
-
-    </div>
     <section id="Hero">
-        
+        <img src="images/Field.jpg" alt="Wide Photo of a Field">
+        <h2> Welcome to ScoresbyFarms</h2>
+    </section>
+    <section id="Hero_Msg">
+        <img src="images/circle_of_veggies.jpg" alt="A circle of veggies">
+        <p>
+            Here at Scoresby Farms, we believe in supporting each other that means we not only sell our own fresh produce, but we also bring you local produce from farmers across Idaho Falls and even Utah. Our main three products we bring in or grow ourselves is Corn, Peaches, and Potatoes. We sell a large variety of fruits and vegetables at great prices. Some of our other products include everything from strawberries, raspberries, apples, zucchini, many varieties of squash once fall hits, and many types of peppers.
+        </p>
+    </section>
+    <section>
+        <img src="images/Corn.jpg">
+        <p>
+            Our Corn is a sweet white and yellow mix. We have been perfecting it for 30+ years and are happy to say that it is some of the best corn Idaho Falls. It is great as a side dish for dinner or served all by itself.
+        </p>
+    </section>
+    <section>
+        <img src="images/Peaches.jpg">
+        <p>
+            Our Peaches come from a local orchard in the Boise Valley, and we sometimes bring in famous Utah Peaches. These make a great addition to the kitchen as they are great for pies, syrups and are excellent canners. Our Peaches are Juicy and Tasty, a great treat all by themselves.
+        </p>
+    </section>
+    <section>
+        <img src="images/Potatos.jpg">
+        <p>
+            We grow our own Red, Yukon Gold, and recently Huckleberry Gold Potatoes. We also bring in Burbank Russets after they harden up, so they last through the winter. These Potatoes are great for Baking, Mashing, and just about anything you can think of. I personally love making French Fries with our Delicious Burbank’s because they make long fries that are crunchy and with a soft interior.
+        </p>
     </section>
 
-
-
 </body>
+
+
+
+<footer>
+    <img src="images/logo64.png" alt="ScoresbyFarms Logo">
+    <h2>
+        ScoresbyFarms &copy; 2023 
+    </h2>
+    <p>
+        Hours
+        Monday
+        Tuesday
+        Wednesday
+        Thursday
+        Friday
+        Saturday
+        Sunday
+    <p>
+    <nav>
+        <a href="https://www.facebook.com/Scoresbyfarmsinc/">
+            <img src="images/facebook.png" alt="facebook">
+        </a>
+        <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
+            <img src="images/googlemaps.jpg" alt="Google Maps">
+        </a>
+        <a href="/ScoresbyFarms/site-plan-scoresbyfarms.html">
+            <h1>Site-Plan</h1>
+        </a>        
+    </nav>
+
+
+
+</footer>
 </html>
