added links to the personal website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="wwr/index.html">White Water Rafting Website</a>
     <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
     <a href="positioning.html">Positioning Activity</a>
-    <a href="#">Personal Website</a>
+    <a href="ScoresbyFarms/index.html">Personal Website</a>
     <a href="ScoresbyFarms/site-plan-scoresbyfarms.html">Personal Siteplan</a>
 </nav>
 <main>
@@ -26,7 +26,7 @@
     </section>
     <section id = "ScoresbyFarms">
         <h2>ScoresbyFarms</h2>
-        <a href="ScoresbyFarms/site-plan-scoresbyfarms.html"><img src="images/Logo.PNG"></a>
+        <a href="ScoresbyFarms/index.html"><img src="images/Logo.PNG"></a>
     </section>
     <section id = "RiverRafting">
         <h2>River Rafting Site</h2>
