fixed link to siteplan

--- a/ScoresbyFarms/our_story.html
+++ b/ScoresbyFarms/our_story.html
@@ -63,7 +63,7 @@
         <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
             <img src="images/googlemaps.jpg" alt="Google Maps">
         </a>
-        <a href="/ScoresbyFarms/site-plan-scoresbyfarms.html">
+        <a href="site-plan-scoresbyfarms.html">
             <h1>Site-Plan</h1>
         </a>        
     </nav>
