--- a/ScoresbyFarms/contact_us.html
+++ b/ScoresbyFarms/contact_us.html
@@ -6,20 +6,23 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>ScoresbyFarms|Our Story</title>
 </head>
-<header>
-    <a id = "logo_link" href="index.html">
-        <img src="images/logo316.png" alt="ScoresbyFarms Logo">
-    </a>
-    <H2>ScoresbyFarms</H2>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href='our_story.html'>About Us</a>
-        <a href="contact_us.html">Contact Us</a>
-    </nav>
-</header>
 
 
 <body>
+    <header>
+        <section id="header_content">
+            <a id = "logo_link" href="index.html">
+                <img src="images/logo316.png" alt="ScoresbyFarms Logo">
+            </a>
+            <H2 id="brand_name">ScoresbyFarms</H2>
+            <nav id="navigation">
+                <a href="index.html">Home</a>
+                <a href='our_story.html'>About Us</a>
+                <a href="contact_us.html">Contact Us</a>
+            </nav>
+        </section>
+    </header>
+
     <h2 id="Banner"> Contact Us</h2>
     <section id="Details">
         <img src="images/contact_us.jpg">
@@ -57,31 +60,27 @@
 
 
 <footer>
-    <a href="index.html">
-        <img src="images/logo64.png" alt="ScoresbyFarms Logo">
-        <h2>
+    <section ID="footer_grid">
+        <img id="footer_logo" src="images/logo128.png" alt="ScoresbyFarms Logo">
+        <h2 id="copyright">
             ScoresbyFarms &copy; 2023 
-        </h2> 
-    </a>
-
-    <p>
-        Hours
-        Wednesday - Saturday 8am - 7pm
-    </p>
-    <nav>
-        <a href="https://www.facebook.com/Scoresbyfarmsinc/">
-            <img src="images/facebook.png" alt="facebook">
-        </a>
-        <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
-            <img src="images/googlemaps.jpg" alt="Google Maps">
-        </a>
-        <a href="site-plan-scoresbyfarms.html">
-            <h1>Site-Plan</h1>
-        </a>        
-    </nav>
-
-
-
+        </h2>
+        <p id="hours">
+            Hours
+            Wednesday - Saturday 8am - 7pm 
+        </p>
+        <nav id="footer_nav">
+            <a href="https://www.facebook.com/Scoresbyfarmsinc/">
+                <img src="images/facebook.png" alt="facebook">
+            </a>
+            <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
+                <img src="images/googlemaps.jpg" alt="Google Maps">
+            </a>
+            <a href="site-plan-scoresbyfarms.html">
+                <img id="siteplan_img"src="images/SitePlan_Img.png" alt="Site-Plan">
+            </a>        
+        </nav>
+    </section>
 </footer>
 
 <script>
