--- a/ScoresbyFarms/our_story.html
+++ b/ScoresbyFarms/our_story.html
@@ -7,70 +7,78 @@
 
     <title>ScoresbyFarms|Our Story</title>
 </head>
-<header>
-    <a id = "logo_link" href="index.html">
-        <img src="images/logo316.png" alt="ScoresbyFarms Logo">
-    </a>
-    <H2>ScoresbyFarms</H2>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href='our_story.html'>About Us</a>
-        <a href="contact_us.html">Contact Us</a>
-    </nav>
-</header>
 
 
 <body>
-    <h1>About Us</h1>
-    <section id="Profile">
-        <img src="images/Man.jpg">
-        <p>
-            Meet Eric Scoresby, a humble farmer with a remarkable talent for nurturing the most extraordinary cornfields. As the current owner of his family's fields, Eric has transformed Scoresby Farms into a haven for unparalleled corn cultivation. He takes care of everything on the farm, from planting to harvest. Eric does it all.
-        </p>
-        <!--  WHITE SPACE    -->
-        <p>
-            Beside Eric Scoresby stands Sheila, the beating heart of Scoresby Farms. While Eric tends to the fields with his green thumb, Sheila is the orchestrator of warmth and community on the farm. With her vibrant spirit and welcoming smile, she infuses Scoresby Farms with a sense of familial connection that extends beyond the rows of corn.
-        </p>
-        <img src="images/Woman.jpg">
-    </section>
-    <section id="Story">
-        <h2>
-            Our Story
-        </h2>
-        <img src = "images/powerlines_and_field.jpg">
-        <p>
-            Eric and Sheila Scoresby started simple by growing corn on a small field they had recently acquired, they sold this corn on the corner of main street, when they started out things were slow going but it was steady income and it was working well, The Scoresby’s Enjoyed the business and found they had great success with it so they decided to try and grow things bigger, they rented a building in Idaho Falls and began selling their corn out of there and making fresh baked goods to sell as well, but things didn’t go as planned. Making baked goods was too much work for their small family, but without the extra products they wouldn’t be making any money because renting the building was too expensive. They decided to keep working hard and trying to bring more business in but they couldn’t afford to so they decided on a plan, they bought a tent and rented a space next to the highway. That year they opened the fruit stand, at this point their children were involved and helped with just about everything from picking to managing the stand. They ended up closing their business in town and stuck with the fruit stand it was easy to pack up and was more flexible. They also decided to stop selling baked goods as they would be in the hot sun all day and they worried about them spoiling. They continue to open each year and sell great farm fresh produce even today!
-        </p>
+    <section id="content">
+
+        <header>
+            <section id="header_content">
+                <a id = "logo_link" href="index.html">
+                    <img src="images/logo316.png" alt="ScoresbyFarms Logo">
+                </a>
+                <h2 id="brand_name">ScoresbyFarms</h2>
+                <nav id="navigation">
+                    <a href="index.html">Home</a>
+                    <a href='our_story.html'>About Us</a>
+                    <a href="contact_us.html">Contact Us</a>
+                </nav>
+            </section>
+        </header>
+
+        <h1 id="title">About Us</h1>
+        <section id="profile">
+            <section id="eric">
+                <img id="eric_img" src="images/Man.jpg" alt="Eric Scoresby" >
+                <p id="eric_p">
+                    Meet Eric Scoresby, a humble farmer with a remarkable talent for nurturing the most extraordinary cornfields. As the current owner of his family's fields, Eric has transformed Scoresby Farms into a haven for unparalleled corn cultivation. He takes care of everything on the farm, from planting to harvest. Eric does it all.
+                </p>
+            </section>
+
+            <!--  WHITE SPACE    -->
+
+            <section id="shelia">
+                <p id="shelia_p">
+                    Beside Eric Scoresby stands Sheila, the beating heart of Scoresby Farms. While Eric tends to the fields with his green thumb, Sheila is the orchestrator of warmth and community on the farm. With her vibrant spirit and welcoming smile, she infuses Scoresby Farms with a sense of familial connection that extends beyond the rows of corn.
+                </p>
+                <img id="shelia_img" src="images/Woman.jpg" alt="Shelia Scoresby">
+            </section>
+        </section>
+        <section id="story">
+            <h2>
+                Our Story
+            </h2>
+            <img src = "images/Narrow_CornField.jpg">
+            <p>
+                Eric and Sheila Scoresby started simple by growing corn on a small field they had recently acquired, they sold this corn on the corner of main street, when they started out things were slow going but it was steady income and it was working well, The Scoresby’s Enjoyed the business and found they had great success with it so they decided to try and grow things bigger, they rented a building in Idaho Falls and began selling their corn out of there and making fresh baked goods to sell as well, but things didn’t go as planned. Making baked goods was too much work for their small family, but without the extra products they wouldn’t be making any money because renting the building was too expensive. They decided to keep working hard and trying to bring more business in but they couldn’t afford to so they decided on a plan, they bought a tent and rented a space next to the highway. That year they opened the fruit stand, at this point their children were involved and helped with just about everything from picking to managing the stand. They ended up closing their business in town and stuck with the fruit stand it was easy to pack up and was more flexible. They also decided to stop selling baked goods as they would be in the hot sun all day and they worried about them spoiling. They continue to open each year and sell great farm fresh produce even today!
+            </p>
+        </section>
+
+        <footer>
+            <section ID="footer_grid">
+                <img id="footer_logo" src="images/logo128.png" alt="ScoresbyFarms Logo">
+                <h2 id="copyright">
+                    ScoresbyFarms &copy; 2023 
+                </h2>
+                <p id="hours">
+                    Hours
+                    Wednesday - Saturday 8am - 7pm 
+                </p>
+                <nav id="footer_nav">
+                    <a href="https://www.facebook.com/Scoresbyfarmsinc/">
+                        <img src="images/facebook.png" alt="facebook">
+                    </a>
+                    <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
+                        <img src="images/googlemaps.jpg" alt="Google Maps">
+                    </a>
+                    <a href="site-plan-scoresbyfarms.html">
+                        <img id="siteplan_img"src="images/SitePlan_Img.png" alt="Site-Plan">
+                    </a>        
+                </nav>
+            </section>
+        </footer>
     </section>
 </body>
 
 
-
-<footer>
-    <a href="index.html">
-        <img src="images/logo64.png" alt="ScoresbyFarms Logo">
-        <h2>
-            ScoresbyFarms &copy; 2023 
-        </h2> 
-    </a>
-
-    <p>
-        Hours
-        Wednesday - Saturday 8am - 7pm
-    <p>
-    <nav>
-        <a href="https://www.facebook.com/Scoresbyfarmsinc/">
-            <img src="images/facebook.png" alt="facebook">
-        </a>
-        <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
-            <img src="images/googlemaps.jpg" alt="Google Maps">
-        </a>
-        <a href="site-plan-scoresbyfarms.html">
-            <h1>Site-Plan</h1>
-        </a>        
-    </nav>
-
-
-
-</footer>
 </html>
