--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,16 +9,17 @@
 <body>
     <div id="content">
         <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="HeartBeat Rapids Logo">
-            </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="rivers.html">Our Rivers</a>
-                <a href="site-plan-rafting.html"> Site Plan</a>
-                <a href="contact_us.html">Contact Us</a>
-            </nav>
-
+            <section id="header_content">
+                <a id = "logo_link" href="index.html">
+                    <img src="images/logo316.png" alt="ScoresbyFarms Logo">
+                </a>
+                <H2 id="brand_name">ScoresbyFarms</H2>
+                <nav id="navigation">
+                    <a href="index.html">Home</a>
+                    <a href='our_story.html'>About Us</a>
+                    <a href="contact_us.html">Contact Us</a>
+                </nav>
+            </section>
         </header>
         <div id="hero">
             <div id="hero_box">
@@ -58,20 +59,27 @@
             </section>
         </main>
         <footer>
-            <p>HeartBeat Rapids &copy; 2023</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contact_us.html">Contact Us</a></p>
-            <div class="social">
-                <a target="_blank" href="https://facebook.com">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-                <a target="_blank" href="https://twitter.com">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a target="_blank" href="https://instagram.com">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
+            <section ID="footer_grid">
+                <img id="footer_logo" src="images/logo128.png" alt="ScoresbyFarms Logo">
+                <h2 id="copyright">
+                    ScoresbyFarms &copy; 2023 
+                </h2>
+                <p id="hours">
+                    Hours
+                    Wednesday - Saturday 8am - 7pm 
+                </p>
+                <nav id="footer_nav">
+                    <a href="https://www.facebook.com/Scoresbyfarmsinc/">
+                        <img src="images/facebook.png" alt="facebook">
+                    </a>
+                    <a href="https://maps.app.goo.gl/pBMeg43HBKBkzE9K7">
+                        <img src="images/googlemaps.jpg" alt="Google Maps">
+                    </a>
+                    <a href="site-plan-scoresbyfarms.html">
+                        <img id="siteplan_img"src="images/SitePlan_Img.png" alt="Site-Plan">
+                    </a>        
+                </nav>
+            </section>
         </footer>
     </div>
 </body>
